<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/brand_blue">

    <TextView
        android:id="@+id/auth_forgot_tv_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="32dp"
        android:text="@string/forgot_password_title"
        android:textColor="@android:color/white"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_max="500dp" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/bg_auth_white_card_top_rounded"
        android:orientation="vertical"
        android:padding="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.75"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_max="500dp">

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/email"
            android:textColor="@color/text_primary"
            android:textStyle="bold"
            android:labelFor="@+id/auth_forgot_et_email"/>

        <EditText
            android:id="@+id/auth_forgot_et_email"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginBottom="32dp"
            android:background="@drawable/bg_auth_input_field"
            android:inputType="textEmailAddress"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"
            android:autofillHints="emailAddress"
            android:importantForAutofill="yes" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/auth_forgot_btn_reset"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="@drawable/bg_auth_primary_button"
            android:text="@string/reset_password"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/auth_forgot_tv_back_to_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="24dp"
            android:text="@string/back_to_login"
            android:textColor="@color/brand_blue"
            android:textStyle="bold"
            android:clickable="true"
            android:focusable="true" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/copyright"
            android:textColor="@color/text_hint"
            android:textSize="14sp" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/auth_forgot_progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:elevation="10dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
