<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_deck_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="@dimen/margin_standard"
        android:paddingTop="@dimen/margin_standard"
        android:paddingBottom="88dp"
        android:clipToPadding="false"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="0dp"
        android:clipChildren="false"
        android:orientation="vertical"
        android:gravity="end">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:clipChildren="false"
            android:gravity="center_vertical">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/btn_deck_import"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/action_import"
                android:src="@drawable/ic_import_deck"
                app:useCompatPadding="true" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/btn_deck_add_ai"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/btn_create_deck_with_ai_des"
                android:src="@drawable/ic_gemini_vector"
                app:useCompatPadding="true"
                app:tint="@null" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/btn_deck_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="12dp"
                android:contentDescription="@string/action_create"
                android:src="@android:drawable/ic_input_add"
                app:useCompatPadding="true" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>